trunk/Archive2/77/d215aad2d931c5/output
main.cpp:14:17: error: 'bidirectional_iterator_tag' does not name a type
         typedef bidirectional_iterator_tag  iterator_category;
                 ^
main.cpp: In member function 'fixed_vector_iterator<ElemT>& fixed_vector_iterator<ElemT>::operator++()':
main.cpp:25:15: error: 'm_Ptr' was not declared in this scope
             ++m_Ptr;
               ^
main.cpp: In member function 'fixed_vector_iterator<ElemT>& fixed_vector_iterator<ElemT>::operator--()':
main.cpp:30:15: error: 'm_Ptr' was not declared in this scope
             --m_Ptr;
               ^
main.cpp: At global scope:
main.cpp:71:14: error: variable or field 'erase' declared void
         void erase
              ^
main.cpp:71:14: error: expected ';' at end of member declaration
main.cpp: In member function 'void SignalMonitoringServer::Unmonitor(const SignalDefinition&)':
main.cpp:105:33: error: 'class fixed_vector<SignalDefinition, 64ul>' has no member named 'erase'
             signal_definitions_.erase(
                                 ^
main.cpp:107:41: error: 'class fixed_vector<SignalDefinition, 64ul>' has no member named 'begin'
                     signal_definitions_.begin(), 
                                         ^
main.cpp:108:41: error: 'class fixed_vector<SignalDefinition, 64ul>' has no member named 'end'
                     signal_definitions_.end(), 
                                         ^
main.cpp:111:37: error: 'class fixed_vector<SignalDefinition, 64ul>' has no member named 'end'
                 signal_definitions_.end()
                                     ^
main.cpp: In member function 'void SignalMonitoringServer::UnmonitorAll()':
main.cpp:116:33: error: 'class fixed_vector<SignalDefinition, 64ul>' has no member named 'clear'
             signal_definitions_.clear();
                                 ^
main.cpp: In instantiation of 'fixed_vector<T, kMaxCount>::fixed_vector() [with T = SignalDefinition; long unsigned int kMaxCount = 64ul]':
main.cpp:94:7:   required from here
main.cpp:61:34: error: use of deleted function 'std::array<SignalDefinition, 64ul>::array()'
         fixed_vector() : count_(0) {}
                                  ^
In file included from main.cpp:3:0:
/usr/local/include/c++/5.1.0/array:81:12: note: 'std::array<SignalDefinition, 64ul>::array()' is implicitly deleted because the default definition would be ill-formed:
     struct array
            ^
/usr/local/include/c++/5.1.0/array:81:12: error: no matching function for call to 'SignalDefinition::SignalDefinition()'
main.cpp:80:9: note: candidate: SignalDefinition::SignalDefinition(int)
         SignalDefinition(int value) :
         ^
main.cpp:80:9: note:   candidate expects 1 argument, 0 provided
main.cpp:78:7: note: candidate: constexpr SignalDefinition::SignalDefinition(const SignalDefinition&)
 class SignalDefinition {
       ^
main.cpp:78:7: note:   candidate expects 1 argument, 0 provided
main.cpp:78:7: note: candidate: constexpr SignalDefinition::SignalDefinition(SignalDefinition&&)
main.cpp:78:7: note:   candidate expects 1 argument, 0 provided
